--- a/index.html.mustache
+++ b/index.html.mustache
@@ -13,7 +13,7 @@
     </style>
     <div>
         <h2>Curriculum Vitae</h2>
-        <h2>Carole Turley Voulgaris</h2>
+        <h2>{{name}}</h2>
     </div>
     <div class="left-right">
         <div>
