--- a/index.html.mustache
+++ b/index.html.mustache
@@ -17,12 +17,12 @@
     </div>
     <div class="left-right">
         <div>
-48 Quincy St, Room 312 <br/>
-Cambridge, MA 02138
+{{Address Line 1}} <br/>
+{{Address Line 2}}
         </div>
         <div style="text-align: end;">
-617-496-2602<br/>
-cvoulgaris@gsd.harvard.edu
+{{Phone}}<br/>
+{{Email}}
         </div>
     </div>
     <div style="display: flex">
